--- a/templates/register.html
+++ b/templates/register.html
@@ -19,6 +19,10 @@ Sign Up
     {{ wtf.form_field(form.username) }}
     {{ wtf.form_field(form.password) }}
     {{ wtf.form_field(form.confpass) }}
+    {{ wtf.form_field(form.firstname) }}
+    {{ wtf.form_field(form.lastname) }}
+    {{ wtf.form_field(form.major) }}
+    {{ wtf.form_field(form.email) }}
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
   </form>
   <a href = '/login'>back to login</a>
