--- a/templates/home.html
+++ b/templates/home.html
@@ -7,4 +7,5 @@ Dashboard
 {% block content %}
     <a href='/logout'>Logout</a>
     <h1>Welcome {{ name }}, to BobChat.</h1>
+    {{ dens|safe }}
 {% endblock %}
