--- a/bobchat/templates/den/index.html
+++ b/bobchat/templates/den/index.html
@@ -8,11 +8,13 @@
     <div>
       <h1>{{ post['title'] }}</h1>
       <div class="about">
-        by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}
+        by {{ post['username'] }} on {{ post['created'] }}
       </div>
     </div>
     {% if g.user['id'] == post['author_id'] %}
-    <a class="action" href="{{ url_for('den.update', id=post['id']) }}">Edit</a>
+    <a class="action" href="{{ url_for('blog.update', id=post['id']) }}"
+      >Edit</a
+    >
     {% endif %}
   </header>
   <p class="body">{{ post['body'] }}</p>
