--- a/bobchat/templates/feed.html
+++ b/bobchat/templates/feed.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block header %}
-<h1>{% block title %}Posts{% endblock %}</h1>
+<h1>{% block title %}Feed{% endblock %}</h1>
 {% endblock %} {% block content %} {% for post in posts %}
 <article class="post">
   <header>
