new routing for index blueprint

--- a/bobchat/templates/index/home.html
+++ b/bobchat/templates/index/home.html
@@ -22,6 +22,9 @@
         the project is open-source and can be found on GitHub
         <a href="https://github.com/tsainez/bobchat">here</a>.
       </p>
+      <p style="margin-right: 20px">
+        Check out the <a href="dens">dens</a> you can participate in as a user.
+      </p>
     </div>
     <div class="column">
       <p style="text-align: right">See what students are posting right now!</p>
