--- a/bobchat/templates/base.html
+++ b/bobchat/templates/base.html
@@ -2,7 +2,7 @@
 <title>{% block title %}{% endblock %} - Bobchat</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 <nav>
-  <h1>Bobchat</h1>
+  <h1><a href="/">Bobchat</a></h1>
   <ul>
     {% if g.user %}
     <li><span>{{ g.user['username'] }}</span></li>
