registration form fixed

--- a/bobchat/templates/auth/register.html
+++ b/bobchat/templates/auth/register.html
@@ -6,6 +6,15 @@
   <input name="username" id="username" required />
   <label for="password">Password</label>
   <input type="password" name="password" id="password" required />
+  <label for="firstname">Firstname</label>
+  <input name="firstname" id ="firstname" required />
+  <label for="lastname">Lastname</label>
+  <input name="lastname" id="lastname" required/>
+  <label for="email">Email</label>
+  <input name = "email" id = "email" required/>
+  <label for="major">Major</label>
+  <input name = "major" id = "major" required/>
+
   <input type="submit" value="Register" />
 </form>
 {% endblock %}
