/den/<den_id>/<post_id>
when in /den/ list of dens is shown. users can click on dens to bring them to /den/<den_id> which will show them posts. users can click on posts to bring them to /den/<den_id>/<post_id> and will be shown information about the post.

--- a/bobchat/templates/dens/index.html
+++ b/bobchat/templates/dens/index.html
@@ -6,7 +6,7 @@
 <article class="post">
   <header>
     <div>
-      <h1>{{ den['name'] }}</h1>
+      <a href="{{ url_for('dens.den', den_id = den['id'] ) }}"><h1>{{ den['name'] }}</h1></a>
       <div class="about">
         Den created by {{ den['username'] }} on {{ den['created'] }}
       </div>
