--- a/bobchat/templates/base.html
+++ b/bobchat/templates/base.html
@@ -6,8 +6,9 @@
   <ul>
     {% if g.user %}
     <li><span>{{ g.user['username'] }}</span></li>
+    <li><a href="{{ url_for('dens.index') }}">All Dens</a></li>
+    <li><a href="{{ url_for('index.index') }}">MyFeed</a></li>
     <li><a href="{{ url_for('auth.logout') }}">Log Out</a> {% else %}</li>
-
     <li><a href="{{ url_for('auth.register') }}">Register</a></li>
     <li>
       <a href="{{ url_for('auth.login') }}">Log In</a>
