--- a/bobchat/templates/index/feed.html
+++ b/bobchat/templates/index/feed.html
@@ -4,9 +4,9 @@
 <article class="post">
   <header>
     <div>
-      <h1>{{ post['title'] }}</h1>
+      <a href="{{ url_for('dens.den_post', den_id = post['den_id'], post_id = post[3]) }}"><h1>{{ post['title'] }}</h1></a>
       <div class="about">
-        Posted by {{ post['username'] }} in {{ post['name'] }} on {{
+        Posted by {{ post['username'] }} in <a href="{{ url_for('dens.den', den_id = post['den_id']) }}"> {{ post['name'] }} </a> on {{
         post['created'] }}
       </div>
     </div>
@@ -21,9 +21,9 @@
 <article class="post">
   <header>
     <div>
-      <h1>{{ post['title'] }}</h1>
+      <a href="{{ url_for('dens.den_post', den_id = post['den_id'], post_id = post[3]) }}"><h1>{{ post['title'] }}</h1></a>
       <div class="about">
-        Posted by {{ post['username'] }} in {{ post['name'] }} on {{
+        Posted by {{ post['username'] }} in <a href="{{ url_for('dens.den', den_id = post['den_id']) }}"> {{ post['name'] }} </a> on {{
         post['created'] }}
       </div>
     </div>
