--- a/bobchat/templates/base.html
+++ b/bobchat/templates/base.html
@@ -6,8 +6,7 @@
   <ul>
     {% if g.user %}
     <li><span>{{ g.user['username'] }}</span></li>
-    <li><a href="{{ url_for('dens.index') }}">All Dens</a></li>
-    <li><a href="{{ url_for('index.index') }}">MyFeed</a></li>
+    {% block navList %} {% endblock %}
     <li><a href="{{ url_for('auth.logout') }}">Log Out</a> {% else %}</li>
     <li><a href="{{ url_for('auth.register') }}">Register</a></li>
     <li>
@@ -20,5 +19,7 @@
   <header>{% block header %}{% endblock %}</header>
   {% for message in get_flashed_messages() %}
   <div class="flash">{{ message }}</div>
-  {% endfor %} {% block content %}{% endblock %}
+  {% endfor %} 
+  {% block content %}
+  {% endblock %}
 </section>
