--- a/bobchat/templates/dens/update.html
+++ b/bobchat/templates/dens/update.html
@@ -1,22 +1,22 @@
 {% extends 'base.html' %} {% block header %}
-<h1>{% block title %}Edit "{{ post['title'] }}"{% endblock %}</h1>
+<h1>{% block title %}Edit "{{ den['title'] }}"{% endblock %}</h1>
 {% endblock %} {% block content %}
 <form method="post">
   <label for="title">Title</label>
   <input
     name="title"
     id="title"
-    value="{{ request.form['title'] or post['title'] }}"
+    value="{{ request.form['name'] or den['name'] }}"
     required
   />
   <label for="body">Body</label>
   <textarea name="body" id="body">
-{{ request.form['body'] or post['body'] }}</textarea
+{{ request.form['description'] or den['description'] }}</textarea
   >
   <input type="submit" value="Save" />
 </form>
 <hr />
-<form action="{{ url_for('den.delete', id=post['id']) }}" method="post">
+<form action="{{ url_for('dens.delete', den_id = den['id']) }}" method="post">
   <input
     class="danger"
     type="submit"
