--- a/bobchat/templates/dens/den.html
+++ b/bobchat/templates/dens/den.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% if g.user %}
 {% block navList %}
-  <li><a href="">New Post</a></li>
+  <li><a href="{{ url_for('posts.create', den_id = den['id']) }}">New Post</a></li>
   <li><a href="{{ url_for('dens.index') }}">All Dens</a></li>
   <li><a href="{{ url_for('index.index') }}">My Feed</a></li>
 {% endblock %} 
@@ -25,6 +25,11 @@
         Posted created by {{ post['username'] }} on {{ post['created'] }}
       </div>
     </div>
+    {% if g.user['username'] == post['username'] %}
+    <div>
+      <a href="{{ url_for('posts.update', post_id = post['id']) }}">Update</a>
+    </div>
+    {% endif %}
   </header>
 </article>
 {% if not loop.last %}
