added likes functionality
posts can now be sorted by likes and likes are shown on other pages.

--- a/bobchat/templates/dens/den.html
+++ b/bobchat/templates/dens/den.html
@@ -31,6 +31,9 @@
       <div class="about">
         Posted created by {{ post['username'] }} on {{ post['created'] }}
       </div>
+      <div>
+        likes: {{ post['likes'] }}
+      </div>
     </div>
     {% if g.user['username'] == post['username'] %}
     <div>
