--- a/bobchat/templates/dens/post.html
+++ b/bobchat/templates/dens/post.html
@@ -13,7 +13,7 @@
            <h1>{{ post['title'] }}</h1> 
         </div>
         <div class="about">
-          Posted created by {{ post['username'] }} on {{ post['created'] }}
+          Posted created by <a href = "{{ url_for('users.user_page', username = post['username']) }}">{{ post['username'] }}</a> on {{ post['created'] }}
         </div>
         <div>
             <p>{{ post['body'] }}</p>
@@ -45,7 +45,7 @@
 {% endif %}
 <div> 
   <p>{{ comment['created'] }}</p> 
-  <p>{{ comment['username'] }}:</p>
+  <p><a href = "{{ url_for('users.user_page', username = comment['username']) }}">{{ comment['username'] }}</a></p>
 </div>
 <div>
   {{ comment['body'] }}
