--- a/bobchat/templates/index/feed.html
+++ b/bobchat/templates/index/feed.html
@@ -15,7 +15,7 @@
     <div>
       <a href="{{ url_for('dens.den_post', den_id = post['den_id'], post_id = post[3]) }}"><h1>{{ post['title'] }}</h1></a>
       <div class="about">
-        Posted by {{ post['username'] }} in <a href="{{ url_for('dens.den', den_id = post['den_id']) }}"> {{ post['name'] }} </a> on {{
+        Posted by <a href="{{ url_for('users.user_page', username = post['username']) }}">{{ post['username'] }}</a> in <a href="{{ url_for('dens.den', den_id = post['den_id']) }}"> {{ post['name'] }} </a> on {{
         post['created'] }}
       </div>
       <div>
@@ -37,7 +37,7 @@
     <div>
       <a href="{{ url_for('dens.den_post', den_id = post['den_id'], post_id = post[3]) }}"><h1>{{ post['title'] }}</h1></a>
       <div class="about">
-        Posted by {{ post['username'] }} in <a href="{{ url_for('dens.den', den_id = post['den_id']) }}"> {{ post['name'] }} </a> on {{
+        Posted by <a href="{{ url_for('users.user_page', username = post['username']) }}">{{ post['username'] }}</a> in <a href="{{ url_for('dens.den', den_id = post['den_id']) }}"> {{ post['name'] }} </a> on {{
         post['created'] }}
       </div>
       <div>
