den description shouldn't overflow now

--- a/bobchat/templates/dens/index.html
+++ b/bobchat/templates/dens/index.html
@@ -31,7 +31,9 @@
       {% endif %}
     </div>
   </header>
-  <p class="body">{{ den['description'] }}</p>
+  <div class = "body">
+    {{ den['description'] }}
+  </div>
 </article>
 {% if not loop.last %}
 <hr />
