dens update page security

--- a/bobchat/templates/users/user_page.html
+++ b/bobchat/templates/users/user_page.html
@@ -24,7 +24,7 @@
           likes: {{ post['likes'] }}
         </div>
       </div>
-      {% if g.user['username'] == post['username'] %}
+      {% if g.user['username'] == post['username'] and g.user%}
       <div>
         <a href="{{ url_for('posts.update', post_id = post['id']) }}">Update</a>
       </div>
