--- a/bobchat/static/style.css
+++ b/bobchat/static/style.css
@@ -1,6 +1,6 @@
 html {
   font-family: sans-serif;
-  background: #eee;
+  background: lightgray;
   padding: 1rem;
 }
 body {
@@ -11,34 +11,34 @@ body {
   background: white;
 }
 h1 {
-  font-family: serif;
-  color: #377ba8;
+  color: #002856; /* uc merced colors */
   margin: 1rem 0;
 }
 a {
-  color: #377ba8;
-}
-hr {
-  border: none;
-  border-top: 1px solid lightgray;
+  color: #002856;
+  text-decoration: none;
 }
 nav {
-  background: lightgray;
+  background: #002856;
   display: flex;
   align-items: center;
-  padding: 0 0.5rem;
+  padding: 12px;
+  color: white;
 }
 nav h1 {
   flex: auto;
   margin: 0;
+  /* color: white; */
 }
-nav h1 a {
+nav a {
   text-decoration: none;
-  padding: 0.25rem 0.5rem;
+  /* padding: 0.25rem 0.5rem; */
+  padding-left: 0.25rem;
+  color: white;
 }
 nav ul {
   display: flex;
-  list-style: none;
+  list-style-type: none;
   margin: 0;
   padding: 0;
 }
@@ -53,10 +53,12 @@ header .action {
 }
 .content > header {
   border-bottom: 1px solid lightgray;
+  /* color: #002856; */
   display: flex;
   align-items: flex-end;
 }
 .content > header h1 {
+  /* color: #002856; */
   flex: auto;
   margin: 1rem 0 0.25rem 0;
 }
@@ -75,6 +77,7 @@ header .action {
   flex: auto;
 }
 .post > header h1 {
+  color: #002856;
   font-size: 1.5em;
   margin-bottom: 0;
 }
