--- a/bobchat/templates/base.html
+++ b/bobchat/templates/base.html
@@ -2,7 +2,7 @@
 <title>{% block title %}{% endblock %} - Bobchat</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 <nav>
-  <h1><a href="/">Bobchat</a></h1>
+  <h1><a href="/">Bobchat 🧶</a></h1>
   <ul>
     {% if g.user %}
     <li><span>{{ g.user['username'] }}</span></li>
@@ -19,7 +19,5 @@
   <header>{% block header %}{% endblock %}</header>
   {% for message in get_flashed_messages() %}
   <div class="flash">{{ message }}</div>
-  {% endfor %} 
-  {% block content %}
-  {% endblock %}
+  {% endfor %} {% block content %} {% endblock %}
 </section>
