--- a/bobchat/templates/base.html
+++ b/bobchat/templates/base.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <title>{% block title %}{% endblock %} - Bobchat</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+<link
+  rel="shortcut icon"
+  type="image/jpg"
+  href="{{ url_for('static', filename='favicon-16x16.png') }}"
+/>
 <nav>
   <h1><a href="/">Bobchat 🧶</a></h1>
   <ul>
